# gmrun

./: .gitignore  Makefile.am  configure.in  configure.scan
po/: Makevars  POTFILES.in  gmrun.pot  ru.gmo  ru.po
src/: Makefile.am  ci_string.h  gtkcompletionline.cc  gtkcompletionline.h  history.cc  history.h  main.cc  main.h  prefs.cc  prefs.h
