dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_SRCDIR([configure.in])
AM_INIT_AUTOMAKE(gmrun, 0.9.2)
AC_CONFIG_HEADERS([config.h])

AM_GNU_GETTEXT_VERSION([0.18.1])
AM_GNU_GETTEXT([external])

AC_ARG_ENABLE(debug,
	[  --enable-debug=[no/yes]	Debugging information == no <--> optimization == yes],,
	enable_debug=no)

if [ ! test "x$enable_debug" != "xyes"]; then
	CFLAGS="-g3 -O0 -DDEBUG"
	CXXFLAGS="-g3 -O0 -DDEBUG"
fi

AC_ARG_ENABLE(system,
    [  --enable-system=[yes/no]  Use "system" libc function to run commands ],,
    enable_system=no)

if [ ! test "x$enable_system" != "xyes"]; then
   CFLAGS="$CFLAGS -DUSE_SYSTEM"
   CXXFLAGS="$CXXFLAGS -DUSE_SYSTEM"
fi

AC_ARG_ENABLE(mtrace,
    [  --enable-mtrace=[no/yes]  Trace memory (de)allocation calls to detect memory leaks ],,
    enable_mtrace=no)

if [ ! test "x$enable_mtrace" != "xyes"]; then
   CFLAGS="$CFLAGS -DMTRACE"
   CXXFLAGS="$CXXFLAGS -DMTRACE"
fi

AC_SEARCH_LIBS([strerror],[cposix])
AC_PROG_CC
AC_PROG_CC
AC_DIAGNOSE([obsolete],[AM_PROG_CC_STDC:
	your code should no longer depend upon `am_cv_prog_cc_stdc', but upon
	`ac_cv_prog_cc_stdc'.  Remove this warning and the assignment when
	you adjust the code.  You can also remove the above call to
	AC_PROG_CC if you already called it elsewhere.])
am_cv_prog_cc_stdc=$ac_cv_prog_cc_stdc

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_PROG_CXX
AC_PATH_STLPORT_LIB
AC_PATH_STLPORT_INC

AC_CHECK_FUNCS([setlocale])
AC_CHECK_FUNCS([strdup])
AC_CHECK_FUNCS([strerror])
AC_CHECK_FUNCS([strncasecmp])

AC_CHECK_HEADERS([libintl.h])
AC_CHECK_HEADERS([locale.h])
AC_CHECK_HEADERS([stddef.h])
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([unistd.h])

AC_C_INLINE
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_HEADER_STDBOOL
AC_PATH_X
AC_TYPE_SIZE_T

AC_CHECK_FUNC( poptGetContext,
              ,
              AC_CHECK_LIB(popt,
                            poptGetContext,
                           LIBS="${LIBS} -lpopt",
                           echo "*** You need to get libpopt ***";exit
                           )
              )

PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.0.4
                        gobject-2.0 >= 2.0.4
                        gthread-2.0 >= 2.0.4)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.0.5)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${datadir}" = 'x${prefix}/share'; then
  if test "x${prefix}" = "xNONE"; then
    prefix=/usr/local
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${ac_default_prefix}/share/${PACKAGE}")
    PACKAGE_DATA_DIR="${ac_default_prefix}/share/${PACKAGE}"
  else
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${prefix}/share/${PACKAGE}")
    PACKAGE_DATA_DIR="${prefix}/share/${PACKAGE}"
  fi
else
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${datadir}/${PACKAGE}")
    PACKAGE_DATA_DIR="${datadir}/${PACKAGE}"
fi
AC_SUBST(PACKAGE_DATA_DIR)

PREFIX=${prefix}
AC_SUBST(PREFIX)

dnl Set PACKAGE_SOURCE_DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

AC_CONFIG_FILES([ po/Makefile.in
Makefile
src/Makefile
config/Makefile
gmrun.spec
])
AC_OUTPUT

